# Tucil1_13521136

./: .clang-tidy  CMakeLists.txt  README.md
src/: inputhandler.h  main.cpp  solver.cpp  solver.h
test/: manual_4 4 4 4.txt  manual_5 5 5 5.txt  manual_6 6 6 6.txt  manual_7 5 3 8.txt  manual_8 7 3 9.txt  manual_A J Q 5.txt  manual_A K 7 4.txt  manual_K Q J A.txt  random_2 J 10 J.txt  random_2 Q 7 3.txt  random_5 J 10 6.txt  random_6 8 8 4.txt  random_8 9 11 5.txt  random_K 10 Q 10.txt
